优化分类维护，品牌管理，平台属性模块的接口功能以适配前端改动